--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Snake Game</h1>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <div id="countdown"></div>
     <script src="script.js"></script>
+    <script>
+        window.onload = function() {
+            startGame();
+        };
+    </script>
 </body>
 </html>
